--- a/src/Components/Slogan/_slogan.scss
+++ b/src/Components/Slogan/_slogan.scss
@@ -1,6 +1,6 @@
 $slogan-icon-bg: $text-color;
 
-$slogan-icon-sm: 32px;
+$slogan-icon-sm: 36px;
 $slogan-icon-border-radius-sm: $slogan-icon-sm / 2;
 $slogan-icon-padding-sm: 8px;
 $slogan-icon-box-shadow-outer-sm: 2px;
@@ -11,6 +11,8 @@ $slogan-icon-padding-md: 16px;
 $slogan-icon-box-shadow-outer-md: 4px;
 
 .slogan {
+  max-width: 100vw;
+  padding: 0 15px;
   text-align: center;
 
   &__icons {
@@ -25,9 +27,9 @@ $slogan-icon-box-shadow-outer-md: 4px;
     display: flex;
     white-space: nowrap;
     text-decoration: none;
+    text-transform: none;
     color: $text-color;
     font-size: 1.5rem;
-    text-transform: none;
   }
 
   &__icon {
@@ -38,7 +40,7 @@ $slogan-icon-box-shadow-outer-md: 4px;
     display: block;
     width: $slogan-icon-sm;
     height: $slogan-icon-sm;
-    margin: 0 5px;
+    margin-left: 5px;
     padding: $slogan-icon-padding-sm;
     border-radius: $slogan-icon-border-radius-sm;
     background-color: $slogan-icon-bg;
@@ -50,9 +52,20 @@ $slogan-icon-box-shadow-outer-md: 4px;
       }
       width: $slogan-icon-md;
       height: $slogan-icon-md;
+      margin-left: 10px;
       padding: $slogan-icon-padding-md;
       border-radius: $slogan-icon-border-radius-md;
       box-shadow: inset 0 0 0 $slogan-icon-box-shadow-outer-md $white, 0 0 0 ($slogan-icon-box-shadow-outer-md / 2) $slogan-icon-bg;
+    }
+
+    &.is-active {
+      box-shadow: inset 0 0 0 ($slogan-icon-box-shadow-outer-sm * 1.5) $white, 0 0 0 ($slogan-icon-box-shadow-outer-sm) $slogan-icon-bg;
+      svg {
+        fill: $white !important;
+      }
+      @media (min-width: $screen-md-min) {
+        box-shadow: inset 0 0 0 ($slogan-icon-box-shadow-outer-md * 1.5) $white, 0 0 0 ($slogan-icon-box-shadow-outer-md) $slogan-icon-bg;
+      }
     }
 
     svg {
@@ -69,11 +82,12 @@ $slogan-icon-box-shadow-outer-md: 4px;
     display: inline-block;
     overflow: hidden;
     max-width: 0;
-    margin-right: 10px;
-    margin-left: 5px;
+    padding-left: 5px;
+    transition: max-width 0.5s 0.2s ease-out;
     line-height: $slogan-icon-sm;
 
     @media (min-width: $screen-md-min) {
+      padding-left: 10px;
       line-height: $slogan-icon-md;
     }
 
@@ -88,6 +102,11 @@ $slogan-icon-box-shadow-outer-md: 4px;
 
   h1 {
     margin-bottom: 0;
+    font-size: 2.3rem;
+
+    @media (min-width: $screen-lg-min) {
+      font-size: 4rem;
+    }
   }
 
   p {
@@ -95,5 +114,9 @@ $slogan-icon-box-shadow-outer-md: 4px;
     margin-bottom: 2rem;
     text-transform: uppercase;
     font-size: 1.15rem;
+
+    @media (min-width: $screen-lg-min) {
+      font-size: 1.75rem;
+    }
   }
 }
