--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,8 @@ h6 {
   position: relative;
   width: 100%;
   height: 100%;
-  transition: transform 0.5s, translate 0.5s; }
+  transition: transform 0.5s, translate 0.5s;
+  transform: scale(5); }
   .logo svg {
     position: absolute;
     top: 50%;
@@ -102,12 +103,24 @@ h6 {
   text-align: center; }
   .slogan__icons {
     display: flex;
+    height: 36px;
     margin: 0;
     padding: 0;
     list-style: none;
     justify-content: center; }
+    @media (min-width: 576px) {
+      .slogan__icons {
+        height: 64px; } }
+    @media (max-width: 575px) {
+      .slogan__icons.is-active .slogan__link:not(.is-active) {
+        max-width: 0; } }
   .slogan__link {
     display: flex;
+    overflow: hidden;
+    max-width: 500px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    transition: max-width 0.5s 0.2s;
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
