--- a/src/Components/Logo/_logo.scss
+++ b/src/Components/Logo/_logo.scss
@@ -13,6 +13,7 @@
   width: 100%;
   height: 100%;
   transition: transform 0.5s, translate 0.5s;
+  transform: scale(5);
 
   svg {
     @include themify {
