--- a/src/Components/Slogan/_slogan.scss
+++ b/src/Components/Slogan/_slogan.scss
@@ -31,6 +31,7 @@ $slogan-icon-box-shadow-outer-md: 4px;
       @media (max-width: ($screen-md-min - 1)) {
         .slogan__link:not(.is-active) {
           max-width: 0;
+          opacity: 0;
         }
       }
     }
@@ -42,10 +43,11 @@ $slogan-icon-box-shadow-outer-md: 4px;
     max-width: 500px;
     padding-top: 5px;
     padding-bottom: 5px;
-    transition: max-width 0.5s 0.2s;
+    transition: opacity 0.5s, max-width 0.2s;
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
+    opacity: 1;
     color: $text-color;
     font-size: 1.5rem;
   }
@@ -101,11 +103,12 @@ $slogan-icon-box-shadow-outer-md: 4px;
     overflow: hidden;
     max-width: 0;
     padding-left: 5px;
-    transition: max-width 0.5s 0.2s ease-out;
+    transition: max-width 0.7s 0.2s ease-out;
     line-height: $slogan-icon-sm;
 
     @media (min-width: $screen-md-min) {
       padding-left: 10px;
+      transition: max-width 1s ease-out;
       line-height: $slogan-icon-md;
     }
 
