--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ h6 {
 
 .logo-wrapper {
   position: absolute;
-  z-index: -1;
+  z-index: -2;
   top: 0;
   left: 0;
   overflow: hidden;
@@ -116,8 +116,8 @@ h6 {
         max-width: 0;
         opacity: 0; } }
   .slogan__link {
+    position: relative;
     display: flex;
-    overflow: hidden;
     max-width: 500px;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -127,7 +127,30 @@ h6 {
     text-transform: none;
     opacity: 1;
     color: #717c80;
+    outline: none;
     font-size: 1.5rem; }
+    @media (min-width: 576px) {
+      .slogan__link {
+        margin-right: 2px;
+        padding-right: 2px; }
+        .slogan__link::after {
+          position: absolute;
+          z-index: -1;
+          top: 0;
+          left: 0;
+          display: none;
+          box-sizing: content-box;
+          width: 100%;
+          height: 100%;
+          margin-top: -2px;
+          margin-left: 1px;
+          padding: 2px 0 2px 4px;
+          content: '';
+          opacity: 0.2;
+          border-radius: 64px;
+          background-color: #717c80; }
+        .slogan__link:focus::after {
+          display: block; } }
   .slogan__icon {
     display: block;
     width: 36px;
@@ -179,7 +202,7 @@ h6 {
         transition: max-width 1s ease-out;
         line-height: 64px; } }
     .slogan__title.is-active {
-      max-width: 100vw; }
+      max-width: 20em; }
   .slogan li {
     white-space: nowrap; }
   .slogan h1 {
