--- a/src/utils/_animations.scss
+++ b/src/utils/_animations.scss
@@ -12,6 +12,20 @@
   }
 }
 
+@keyframes blinkToHidden {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
 @keyframes fadeInSlide {
   0% {
     transform: translateY(10px);
@@ -24,5 +38,15 @@
 
   to {
     opacity: 1;
+  }
+}
+
+@keyframes scaleToSize {
+  0% {
+    transform: scale(0.7);
+  }
+
+  100% {
+    transform: scale(1);
   }
 }
