--- a/src/App.css
+++ b/src/App.css
@@ -186,9 +186,9 @@ h6 {
     white-space: nowrap;
     pointer-events: none; }
     .slogan li.start-animation {
-      pointer-events: all;
       transform: scale(0.7);
-      animation: scaleToSize 1s forwards; }
+      animation: scaleToSize 1s forwards;
+      pointer-events: all; }
       .slogan li.start-animation:nth-child(1) .slogan__icon {
         animation: fadeInSlide 0.5s 0.1s forwards; }
       .slogan li.start-animation:nth-child(2) .slogan__icon {
@@ -204,11 +204,11 @@ h6 {
       .slogan li.start-animation:nth-child(7) .slogan__icon {
         animation: fadeInSlide 0.5s 0.7s forwards; }
   .slogan__icon {
+    position: relative;
     display: block;
     width: 36px;
     height: 36px;
     margin-left: 5px;
-    padding: 8px;
     opacity: 0;
     border-radius: 18px;
     background-color: #717c80; }
@@ -221,7 +221,6 @@ h6 {
         width: 64px;
         height: 64px;
         margin-left: 10px;
-        padding: 16px;
         border-radius: 32px;
         box-shadow: inset 0 0 0 4px #fff, 0 0 0 2px #717c80; }
         .dark .slogan__icon {
@@ -236,8 +235,17 @@ h6 {
         .slogan__icon.is-active {
           box-shadow: inset 0 0 0 6px #fff, 0 0 0 4px #717c80; } }
     .slogan__icon svg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
       max-width: 100%;
-      max-height: 100%; }
+      height: 100%;
+      max-height: 100%;
+      padding: 8px; }
+      @media (min-width: 576px) {
+        .slogan__icon svg {
+          padding: 16px; } }
       .dark .slogan__icon svg {
         fill: #232729; }
       .light .slogan__icon svg {
