--- a/src/Components/Slogan/_slogan.scss
+++ b/src/Components/Slogan/_slogan.scss
@@ -94,10 +94,9 @@ $slogan-icon-box-shadow-outer-md: 4px;
     pointer-events: none;
 
     &.start-animation {
-      pointer-events: all;
-
       transform: scale(0.7);
       animation: scaleToSize 1s forwards;
+      pointer-events: all;
 
       @for $i from 1 through 7 {
         &:nth-child(#{$i}) {
@@ -110,11 +109,11 @@ $slogan-icon-box-shadow-outer-md: 4px;
   }
 
   &__icon {
+    position: relative;
     display: block;
     width: $slogan-icon-sm;
     height: $slogan-icon-sm;
     margin-left: 5px;
-    padding: $slogan-icon-padding-sm;
     opacity: 0;
     border-radius: $slogan-icon-border-radius-sm;
     background-color: $slogan-icon-bg;
@@ -128,7 +127,6 @@ $slogan-icon-box-shadow-outer-md: 4px;
       width: $slogan-icon-md;
       height: $slogan-icon-md;
       margin-left: 10px;
-      padding: $slogan-icon-padding-md;
       border-radius: $slogan-icon-border-radius-md;
       box-shadow: inset 0 0 0 $slogan-icon-box-shadow-outer-md $white, 0 0 0 ($slogan-icon-box-shadow-outer-md / 2) $slogan-icon-bg;
 
@@ -149,8 +147,18 @@ $slogan-icon-box-shadow-outer-md: 4px;
     }
 
     svg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
       max-width: 100%;
+      height: 100%;
       max-height: 100%;
+      padding: $slogan-icon-padding-sm;
+
+      @media (min-width: $screen-md-min) {
+        padding: $slogan-icon-padding-md;
+      }
 
       @include themify {
         fill: get-themify-variable('icon-fill');
