--- a/src/Components/Logo/_logo.scss
+++ b/src/Components/Logo/_logo.scss
@@ -1,3 +1,8 @@
+$logo-initial-scale: 5;
+
+$logo-portrait-scale: 0.8;
+$logo-landscape-scale: 0.9;
+
 .logo-wrapper {
   position: absolute;
   z-index: -2;
@@ -12,15 +17,45 @@
   position: relative;
   width: 100%;
   height: 100%;
-  transition: transform 0.5s, translate 0.5s;
-  transform: scale(5);
+  transition: transform 0.5s;
+  transform: scale($logo-initial-scale);
+
+  @media (orientation: portrait) {
+    animation: animateLogoPortrait 1s forwards;
+  }
+
+  @media (orientation: landscape) {
+    animation: animateLogoLandscape 1s forwards;
+  }
 
   svg {
     @include themify {
       fill: get-themify-variable('logo-fill');
+      box-shadow: 0 0 0 4vw darken(get-themify-variable('logo-fill'), 5%);
     }
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    border-radius: 50%;
+  }
+}
+
+@keyframes animateLogoPortrait {
+  from {
+    transform: scale($logo-initial-scale);
+  }
+
+  to {
+    transform: scale($logo-portrait-scale);
+  }
+}
+
+@keyframes animateLogoLandscape {
+  from {
+    transform: scale($logo-initial-scale);
+  }
+
+  to {
+    transform: scale($logo-landscape-scale);
   }
 }
