--- a/src/Components/Slogan/_slogan.scss
+++ b/src/Components/Slogan/_slogan.scss
@@ -41,7 +41,7 @@ $slogan-icon-box-shadow-outer-md: 4px;
   &__link {
     position: relative;
     display: flex;
-    max-width: 500px;
+    max-width: 20em;
     padding-top: 5px;
     padding-bottom: 5px;
     transition: opacity 0.5s, max-width 0.2s;
