--- a/src/App.css
+++ b/src/App.css
@@ -101,20 +101,13 @@ h6 {
   overflow: hidden;
   min-height: 100vh;
   color: #717c80; }
-  .app::before {
-    position: absolute;
-    z-index: -2;
-    width: 100vw;
-    height: 100vh;
-    content: ''; }
-    .dark .app::before {
-      background-color: #232729; }
-    .light .app::before {
-      background-color: #f5f5f5; }
+  .dark .app {
+    background-color: #232729; }
+  .light .app {
+    background-color: #f5f5f5; }
 
 .logo-wrapper {
   position: absolute;
-  z-index: -2;
   top: 0;
   left: 0;
   overflow: hidden;
@@ -158,6 +151,8 @@ h6 {
     transform: scale(0.9); } }
 
 .slogan {
+  position: relative;
+  z-index: 1;
   max-width: 100vw;
   padding: 0 15px;
   text-align: center; }
