Update readme file, add link to github, transform slogan bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -98,8 +98,9 @@ h6 {
   background-color: rgba(255, 255, 255, 0.5); }
 
 .app {
+  position: relative;
   overflow: hidden;
-  min-height: 100vh;
+  height: 100vh;
   color: #717c80; }
   .dark .app {
     background-color: #232729; }
@@ -319,3 +320,48 @@ h6 {
   animation: blinkToHidden 0.7s 2s 3 forwards;
   animation-iteration-count: 3 !important;
   opacity: 1; }
+
+.repository-link {
+  position: fixed;
+  z-index: 2;
+  right: 0;
+  bottom: 0; }
+  .repository-link a {
+    position: relative;
+    z-index: 2;
+    display: block;
+    box-sizing: content-box;
+    width: 24px;
+    height: 24px;
+    padding: 15px;
+    transition: transform 0.5s;
+    transform: translate(20%, 20%); }
+    @media (min-width: 576px) {
+      .repository-link a {
+        width: 36px;
+        height: 36px; } }
+    .repository-link a:focus, .repository-link a:hover {
+      transform: translate(0, 0); }
+      .repository-link a:focus + .repository-link__background, .repository-link a:hover + .repository-link__background {
+        transform: translate(-50%, -50%) rotate(-30deg); }
+  .repository-link__background {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    box-sizing: content-box;
+    width: 1000%;
+    height: 100%;
+    padding: 15px 0;
+    transition: transform 0.5s;
+    transform: translate(-42%, -42%) rotate(-45deg); }
+    .dark .repository-link__background {
+      background-color: #2b3033; }
+    .light .repository-link__background {
+      background-color: #eee; }
+    @media (min-width: 576px) {
+      .repository-link__background {
+        padding: 25px 0; } }
+  .repository-link svg {
+    width: 100%;
+    height: 100%;
+    fill: #b0bac0; }
