--- a/src/App.scss
+++ b/src/App.scss
@@ -87,6 +87,6 @@ h6 {
   }
 }
 
-@import 'Components/Logo/logo';
-@import 'Components/Slogan/slogan';
-@import 'Components/RepositoryLink/repository-link';
+@import 'components/Logo/logo';
+@import 'components/Slogan/slogan';
+@import 'components/RepositoryLink/repository-link';
