Restructure project. Pass data from AppContext down to slogan. Remove duplicate code

--- a/src/App.scss
+++ b/src/App.scss
@@ -87,6 +87,6 @@ h6 {
   }
 }
 
-@import 'components/Logo/logo';
-@import 'components/Slogan/slogan';
-@import 'components/RepositoryLink/repository-link';
+@import 'assets/scss/logo';
+@import 'assets/scss/slogan';
+@import 'assets/scss/repository-link';
