--- a/src/App.css
+++ b/src/App.css
@@ -89,23 +89,18 @@ h6 {
   .sm-only {
     display: none; } }
 
-.dark ::selection {
+::selection {
   color: #b0bac0;
-  background-color: rgba(0, 0, 0, 0.2); }
-
-.light ::selection {
-  color: #b0bac0;
-  background-color: rgba(255, 255, 255, 0.5); }
+  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--selection-background-color); }
 
 .app {
   position: relative;
   overflow: hidden;
   height: 100vh;
-  color: #717c80; }
-  .dark .app {
-    background-color: #232729; }
-  .light .app {
-    background-color: #f5f5f5; }
+  color: #717c80;
+  background-color: #232729;
+  background-color: var(--background); }
   .app main {
     position: relative;
     z-index: 1; }
@@ -134,13 +129,11 @@ h6 {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    border-radius: 50%; }
-    .dark .logo svg {
-      fill: #2b3033;
-      box-shadow: 0 0 0 4vw #1f2325; }
-    .light .logo svg {
-      fill: #eee;
-      box-shadow: 0 0 0 4vw #e1e1e1; }
+    border-radius: 50%;
+    box-shadow: 0 0 0 4vw #1f2325;
+    box-shadow: 0 0 0 4vw var(--background-darker);
+    fill: #2b3033;
+    fill: var(--background-lighter); }
 
 @keyframes animateLogoPortrait {
   from {
@@ -237,22 +230,17 @@ h6 {
     margin-left: 5px;
     opacity: 0;
     border-radius: 18px;
-    background-color: #717c80; }
-    .dark .slogan__icon {
-      box-shadow: inset 0 0 0 2px #232729, 0 0 0 1px #717c80; }
-    .light .slogan__icon {
-      box-shadow: inset 0 0 0 2px #f5f5f5, 0 0 0 1px #717c80; }
+    background-color: #717c80;
+    box-shadow: inset 0 0 0 2px #232729, 0 0 0 1px #717c80;
+    box-shadow: inset 0 0 0 2px var(--#232729), 0 0 0 1px #717c80; }
     @media (min-width: 576px) {
       .slogan__icon {
         width: 64px;
         height: 64px;
         margin-left: 10px;
         border-radius: 32px;
-        box-shadow: inset 0 0 0 4px #fff, 0 0 0 2px #717c80; }
-        .dark .slogan__icon {
-          box-shadow: inset 0 0 0 4px #232729, 0 0 0 2px #717c80; }
-        .light .slogan__icon {
-          box-shadow: inset 0 0 0 4px #f5f5f5, 0 0 0 2px #717c80; } }
+        box-shadow: inset 0 0 0 4px #232729, 0 0 0 2px #717c80;
+        box-shadow: inset 0 0 0 4px var(--background), 0 0 0 2px #717c80; } }
     .slogan__icon.is-active {
       box-shadow: inset 0 0 0 3px #fff, 0 0 0 2px #717c80; }
       .slogan__icon.is-active svg {
@@ -268,14 +256,12 @@ h6 {
       max-width: 100%;
       height: 100%;
       max-height: 100%;
-      padding: 8px; }
+      padding: 8px;
+      fill: #232729;
+      fill: var(--background); }
       @media (min-width: 576px) {
         .slogan__icon svg {
           padding: 16px; } }
-      .dark .slogan__icon svg {
-        fill: #232729; }
-      .light .slogan__icon svg {
-        fill: #f5f5f5; }
   .slogan__title {
     display: inline-block;
     overflow: hidden;
@@ -353,11 +339,9 @@ h6 {
     height: 100%;
     padding: 15px 0;
     transition: transform 0.5s;
-    transform: translate(-42%, -42%) rotate(-45deg); }
-    .dark .repository-link__background {
-      background-color: #2b3033; }
-    .light .repository-link__background {
-      background-color: #eee; }
+    transform: translate(-42%, -42%) rotate(-45deg);
+    background-color: #2b3033;
+    background-color: var(--background-lighter); }
     @media (min-width: 576px) {
       .repository-link__background {
         padding: 25px 0; } }
