--- a/src/assets/scss/utils/_themes.scss
+++ b/src/assets/scss/utils/_themes.scss
@@ -1,38 +1,25 @@
-@import 'color-mixins';
-
+// Breakpoints.
 $screen-md-min: 576px;
 $screen-lg-min: 992px;
 $screen-xlg-min: 1200px;
 
-$dark-background: #232729;
-$light-background: #f5f5f5;
-
 $dark-shade: #717c80;
 $light-shade: #b0bac0;
-
-$logo-fill-light: #eee;
-$logo-fill-dark: #2b3033;
+$white: #fff;
 
 $text-color: $dark-shade;
 $text-highlight: $light-shade;
 $link-color: $text-color;
 $icon-hover-bg: #495962;
 
-$white: #fff;
+// Light theme
+$background: #f5f5f5;
+$background-lighter: #eee;
+$background-darker: darken($background-lighter, 5%);
+$selection-background-color: rgba(255, 255, 255, 0.5);
 
-$themes: (
-  'dark': (
-    'background': $dark-background,
-    'icon-fill': $dark-background,
-    'logo-fill': $logo-fill-dark,
-    'selection-color': rgba(0, 0, 0, 0.2),
-    'repository-link-bg': $logo-fill-dark
-  ),
-  'light': (
-    'background': $light-background,
-    'icon-fill': $light-background,
-    'logo-fill': $logo-fill-light,
-    'selection-color': rgba(255, 255, 255, 0.5),
-    'repository-link-bg': $logo-fill-light
-  )
-);
+// Dark theme, default fallback
+$background: #232729;
+$background-lighter: #2b3033;
+$background-darker: darken($background-lighter, 5%);
+$selection-background-color: rgba(0, 0, 0, 0.2);
