--- a/src/App.css
+++ b/src/App.css
@@ -308,28 +308,23 @@ h6 {
   opacity: 1; }
 
 .repository-link {
-  position: fixed;
+  position: relative;
   z-index: 2;
-  right: 0;
-  bottom: 0; }
-  .repository-link a {
-    position: relative;
-    z-index: 2;
-    display: block;
-    box-sizing: content-box;
-    width: 24px;
-    height: 24px;
-    padding: 15px;
-    transition: transform 0.5s;
-    transform: translate(20%, 20%); }
-    @media (min-width: 576px) {
-      .repository-link a {
-        width: 36px;
-        height: 36px; } }
-    .repository-link a:focus, .repository-link a:hover {
-      transform: translate(0, 0); }
-      .repository-link a:focus + .repository-link__background, .repository-link a:hover + .repository-link__background {
-        transform: translate(-50%, -50%) rotate(-30deg); }
+  display: block;
+  box-sizing: content-box;
+  width: 24px;
+  height: 24px;
+  padding: 15px;
+  transition: transform 0.5s;
+  transform: translate(20%, 20%); }
+  @media (min-width: 576px) {
+    .repository-link {
+      width: 36px;
+      height: 36px; } }
+  .repository-link:focus, .repository-link:hover {
+    transform: translate(0, 0); }
+    .repository-link:focus + .repository-link__background, .repository-link:hover + .repository-link__background {
+      transform: translate(-50%, -50%) rotate(-30deg); }
   .repository-link__background {
     position: absolute;
     top: 50%;
