--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,7 @@ h6 {
   position: relative;
   overflow: hidden;
   height: 100vh;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   color: #717c80;
   background-color: #232729;
   background-color: var(--background); }
@@ -128,6 +129,7 @@ h6 {
   .logo svg {
     position: absolute;
     top: 50%;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     transform: translateY(-50%);
     border-radius: 50%;
     box-shadow: 0 0 0 4vw #1f2325;
@@ -228,11 +230,12 @@ h6 {
     width: 36px;
     height: 36px;
     margin-left: 5px;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     opacity: 0;
     border-radius: 18px;
     background-color: #717c80;
     box-shadow: inset 0 0 0 2px #232729, 0 0 0 1px #717c80;
-    box-shadow: inset 0 0 0 2px var(--#232729), 0 0 0 1px #717c80; }
+    box-shadow: inset 0 0 0 2px var(--background), 0 0 0 1px #717c80; }
     @media (min-width: 576px) {
       .slogan__icon {
         width: 64px;
@@ -257,6 +260,7 @@ h6 {
       height: 100%;
       max-height: 100%;
       padding: 8px;
+      transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
       fill: #232729;
       fill: var(--background); }
       @media (min-width: 576px) {
@@ -333,7 +337,7 @@ h6 {
     width: 1000%;
     height: 100%;
     padding: 15px 0;
-    transition: transform 0.5s;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     transform: translate(-42%, -42%) rotate(-45deg);
     background-color: #2b3033;
     background-color: var(--background-lighter); }
@@ -344,3 +348,28 @@ h6 {
     width: 100%;
     height: 100%;
     fill: #b0bac0; }
+
+.theme-switcher {
+  position: fixed;
+  z-index: 5;
+  bottom: 5px;
+  left: 5px;
+  display: flex; }
+  .theme-switcher__label {
+    position: relative;
+    cursor: pointer; }
+    .theme-switcher__label.is-active svg {
+      fill: #b0bac0; }
+  .theme-switcher svg {
+    width: 14px;
+    height: 14px;
+    fill: #717c80; }
+    @media (min-width: 576px) {
+      .theme-switcher svg {
+        width: 24px;
+        height: 24px; } }
+  .theme-switcher input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    visibility: hidden; }
