--- a/src/assets/scss/utils/_utility-classes.scss
+++ b/src/assets/scss/utils/_utility-classes.scss
@@ -18,3 +18,15 @@
     display: none;
   }
 }
+
+.sr-only {
+  position: absolute;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  clip: rect(0, 0, 0, 0);
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  white-space: nowrap;
+  border: 0;
+}
