Use buttons for changing the theme, remove extra code

--- a/src/App.css
+++ b/src/App.css
@@ -366,15 +366,19 @@ h6 {
   bottom: 5px;
   left: 5px;
   display: flex; }
-  .theme-switcher__label {
+  .theme-switcher__button {
     position: relative;
-    cursor: pointer; }
-    .theme-switcher__label.is-active svg {
-      fill: #b0bac0; }
+    cursor: pointer;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    opacity: 0.4;
+    border: 0;
+    background: none; }
+    .theme-switcher__button.is-active {
+      opacity: 1; }
   .theme-switcher svg {
     width: 14px;
     height: 14px;
-    fill: #717c80; }
+    fill: #b0bac0; }
     @media (min-width: 576px) {
       .theme-switcher svg {
         width: 24px;
